fixing homepage animation overflows (thanks to @johnhooks)

--- a/src/styles/base/_html.scss
+++ b/src/styles/base/_html.scss
@@ -9,7 +9,8 @@ html {
   -webkit-text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  touch-action: none
+  touch-action: none;
+  overflow-X: hidden;
 }
 
 body {
